--- a/webpages/wp1/cellphone.html
+++ b/webpages/wp1/cellphone.html
@@ -9,9 +9,11 @@
         <img id="camera" src="css-site-replication-master/starter-code/images/brand.png"
             alt="instagram brand"> 
         <button id="login">
+        <a href="https://www.instagram.com/accounts/login/">
             <img id="home" src="css-site-replication-master/starter-code/images/home.png"
                 alt="home image">
             <div id="buttonText">Log in</div>
+        </a>
         </button>        
         <img id="cellphones" src="css-site-replication-master/starter-code/images/phones.png" 
             alt="image of cellphones">
@@ -25,10 +27,14 @@
         feel, then post to Instagram — it's that easy. You can even share to Facebook,
         Twitter, Tumblr and more. It's a new way to see the world.</p> 
         <p>Oh yeah, did we mention it's free?</p>
+        <a href="https://apps.apple.com/ca/app/instagram/id389801252">
         <img class="store" src="css-site-replication-master/starter-code/images/badge-iphone.png" 
             alt="Apple app store link">
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android"> 
          <img class="store" src="css-site-replication-master/starter-code/images/badge-android.png" 
             alt="Google play store link">
+        </a>
     </div>
     
     <div id="footer">
